src/objects/sked_Incident_Report__c.object
<CustomObject>
    <fields>
        <fullName>sked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incident Reports</relationshipLabel>
        <relationshipName>sked_Incident_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Additional_information__c</fullName>
        <inlineHelpText>Completed by Cosgrove Senior Management team.</inlineHelpText>
        <label>Additional information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Background_to_incident__c</fullName>
        <inlineHelpText>Record any support need changes or concerns leading up to incident if required and include any recent reviews with Cosgrove staff or statutory services.</inlineHelpText>
        <label>Background to incident:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Date_Time_of_Incident__c</fullName>
        <label>Date &amp; Time of Incident</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked_Debrief_Required__c</fullName>
        <label>Debrief Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Debrief_meeting_carried_out__c</fullName>
        <label>Debrief meeting carried out?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Debrief_meeting_details__c</fullName>
        <label>Debrief meeting details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Exact_location_of_Incident__c</fullName>
        <label>Exact location of Incident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Follow_up_details__c</fullName>
        <label>Follow up details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Incident Reports</relationshipLabel>
        <relationshipName>Incident_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_NOK_POA_Contact_Method__c</fullName>
        <label>NOK/POA Contact Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_NOK_POA_Details__c</fullName>
        <label>NOK/POA Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_NOK_POA_Treatment_Update_Detail__c</fullName>
        <label>NOK, POA Treatment Update Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_NOK_POA_updated_regarding_treatment__c</fullName>
        <inlineHelpText>Has the family, NOK. POA been updated throughout incident regarding medical treatment?</inlineHelpText>
        <label>NOK, POA updated regarding treatment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Person_stayed_overnight_in_hospital__c</fullName>
        <label>Person stayed overnight in hospital</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Persons_support_plan_updated__c</fullName>
        <label>Persons support plan updated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hight</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Problem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem</label>
        <referenceTo>HealthCloudGA__CarePlanProblem__c</referenceTo>
        <relationshipLabel>Incident Reports</relationshipLabel>
        <relationshipName>sked_Incident_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Require_Adult_Support__c</fullName>
        <inlineHelpText>Does this incident require an Adult support protection concern raised?</inlineHelpText>
        <label>Require Adult support protection concern</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Support_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Plan</label>
        <referenceTo>sked_Support_Plan__c</referenceTo>
        <relationshipLabel>Incident Reports</relationshipLabel>
        <relationshipName>sked_Incident_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Treatment_Details__c</fullName>
        <inlineHelpText>include first aid provided/doctor called/ambulance called</inlineHelpText>
        <label>Treatment Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_Type_of_Incident_Other__c</fullName>
        <label>Type of Incident - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Type_of_Incident__c</fullName>
        <label>Type of Incident</label>
        <picklist>
            <picklistValues>
                <fullName>Burns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage to property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deterioration in physical health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distress/behaviour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall or trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire or Alarm activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed medication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Was_any_treatment_given__c</fullName>
        <label>Was any treatment given</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Was_the_NOK_POA_Contacted__c</fullName>
        <inlineHelpText>NOK = Next of Kin / POA = Power Of Attorney</inlineHelpText>
        <label>Was the NOK/POA Contacted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Incident Report</label>
    <nameField>
        <displayFormat>INC-{0000}</displayFormat>
        <label>Incident Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>